--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
-python:
-    - "2.7"
-    - "3.4"
-
+#python:
+#    - "2.7"
+#    - "3.4"
 install:
     - pip install tox
 script:
