--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py27,py34
+#envlist = py27,py34
+envlist = py27
 [testenv]
-deps=nose
-commands=nosetests
+deps=pytest
+commands=py.test --doctest-modules tests wcf
